Website: Fix box-shadow flickering (#164)
This prevents flickering when switching tabs

--- a/docs/custom.css
+++ b/docs/custom.css
@@ -4,3 +4,7 @@
 .md-header[data-md-state="shadow"] {
   transition: unset;
 }
+.md-header {
+  transition: unset;
+  box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.1), 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
+}
